tests/transpiler/x/py/update_stmt.py
# Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:08 +0700
from dataclasses import dataclass

@dataclass
class Person:
    name: string
    age: int
    status: string

people = [Person(name="Alice", age=17, status="minor"), Person(name="Bob", age=25, status="unknown"), Person(name="Charlie", age=18, status="unknown"), Person(name="Diana", age=16, status="minor")]
for idx, item in enumerate(people):
    if item["age"] >= 18:
        item["status"] = "adult"
        item["age"] = item["age"] + 1
    people[idx] = item
# test update adult status
assert people == [Person(name="Alice", age=17, status="minor"), Person(name="Bob", age=26, status="adult"), Person(name="Charlie", age=19, status="adult"), Person(name="Diana", age=16, status="minor")]
print((str("ok").lower() if isinstance("ok", bool) else "ok"))
